--- a/css/style.css
+++ b/css/style.css
@@ -91,7 +91,7 @@ h2 {
     border-top: 1px solid #dce8f1;
     padding: 25px;
     text-align: center;
-    float: right;
+    float: left;
     -webkit-border-radius: 0 0 10px 10px;
     border-radius: 0 0 10px 10px;
 }
