--- a/css/style.css
+++ b/css/style.css
@@ -88,6 +88,7 @@ h2 {
 
 #formFooter {
     background-color: #f6f6f6;
+    width: 100%;
     border-top: 1px solid #dce8f1;
     padding: 25px;
     text-align: center;
