--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,9 @@ body
 {
     background-image: url("../name.jpg");
     background-repeat: no-repeat;
+    background-size: 100%;
+    width: 100%;
+    height: 100%;
     font-family: vazir ;
     direction: rtl ;
 }
