--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,7 @@ body
     background-repeat: no-repeat;
     background-size: 100%;
     width: 100%;
-    height: 100%;
+    height: auto;
     font-family: vazir ;
     direction: rtl ;
 }
