--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,7 @@
 }
 body
 {
-    background-image: url("../name.jpg");
+    background: #9d9d9dc3;
     font-family: vazir ;
     direction: rtl ;
 }
