--- a/css/style.css
+++ b/css/style.css
@@ -77,7 +77,7 @@ h2 {
     border-radius: 10px 10px 10px 10px;
     background: #fff;
     padding: 30px;
-    width: auto;
+    width: 10%;
     max-width: 450px;
     position: relative;
     padding: 0px;
