--- a/css/style.css
+++ b/css/style.css
@@ -78,14 +78,16 @@ h2 {
     background: #fff;
     padding: 30px;
     width: 90%;
-    max-width: au;
+    max-width: 450px;
     position: relative;
     padding: 0px;
     -webkit-box-shadow: 0 30px 60px 0 rgba(0,0,0,0.3);
     box-shadow: 0 30px 60px 0 rgba(0,0,0,0.3);
     text-align: center;
 }
-
+td {
+    max-width: 450px;
+}
 #formFooter {
     background-color: #f6f6f6;
     width: 100%;
