--- a/css/style.css
+++ b/css/style.css
@@ -86,7 +86,10 @@ h2 {
     text-align: center;
 }
 td {
+    
+    width: 90%;
     max-width: 450px;
+    font-size: 12px;
 }
 #formFooter {
     background-color: #f6f6f6;
