--- a/css/style.css
+++ b/css/style.css
@@ -77,20 +77,15 @@ h2 {
     border-radius: 10px 10px 10px 10px;
     background: #fff;
     padding: 30px;
-    width: 90%;
-    max-width: 450px;
+    width: 100%;
+    max-width: auto;
     position: relative;
     padding: 0px;
     -webkit-box-shadow: 0 30px 60px 0 rgba(0,0,0,0.3);
     box-shadow: 0 30px 60px 0 rgba(0,0,0,0.3);
     text-align: center;
 }
-td {
-    
-    width: 90%;
-    max-width: 450px;
-    font-size: 12px;
-}
+
 #formFooter {
     background-color: #f6f6f6;
     width: 100%;
