--- a/css/style.css
+++ b/css/style.css
@@ -77,8 +77,9 @@ h2 {
     border-radius: 10px 10px 10px 10px;
     background: #fff;
     padding: 30px;
-    width: 100%;
+    width: 90%;
     max-width: auto;
+    font-size: 5;
     position: relative;
     padding: 0px;
     -webkit-box-shadow: 0 30px 60px 0 rgba(0,0,0,0.3);
