--- a/css/style.css
+++ b/css/style.css
@@ -78,8 +78,8 @@ h2 {
     background: #fff;
     padding: 30px;
     width: 90%;
-    max-width: auto;
-    font-size: 5;
+    max-width: 450px
+    font-size: 5px;
     position: relative;
     padding: 0px;
     -webkit-box-shadow: 0 30px 60px 0 rgba(0,0,0,0.3);
