--- a/css/style.css
+++ b/css/style.css
@@ -77,7 +77,8 @@ h2 {
     border-radius: 10px 10px 10px 10px;
     background: #fff;
     padding: 30px;
-    width: 100%;
+    width: 90%;
+    max-width: auto;
     font-size: 5px;
     position: relative;
     padding: 0px;
