--- a/css/style.css
+++ b/css/style.css
@@ -87,7 +87,10 @@ h2 {
 }
 td{
     width: 100%;
+    max-width: 450px;
     font-size: 12px;
+    position: relative;
+    text-align: center;
 }
 #formFooter {
     background-color: #f6f6f6;
