--- a/css/style.css
+++ b/css/style.css
@@ -89,7 +89,7 @@ td{
     width: 100%;
     max-width: 450px;
     font-size: 12px;
-    float: right;
+    float: left;
 }
 #formFooter {
     background-color: #f6f6f6;
