--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,8 @@
+* {
+    box-sizing: border-box;
+    padding: 0px;
+    margin: 0px;
+}
 @font-face {
     font-family: 'Vazir' ;
     src: url('../font/vazir.woff') format('woff');
@@ -73,7 +78,6 @@ h2 {
 }
 
 #formContent {
-    box-sizing: border-box;
     -webkit-border-radius: 10px 10px 10px 10px;
     border-radius: 10px 10px 10px 10px;
     background: #fff;
@@ -87,7 +91,6 @@ h2 {
     text-align: center;
 }
 td{
-    box-sizing: border-box;
     width: 90%;
     max-width: 450px;
     font-size: 12px;
