--- a/css/style.css
+++ b/css/style.css
@@ -82,8 +82,8 @@ h2 {
     border-radius: 10px 10px 10px 10px;
     background: #fff;
     padding: 30px;
-    width: 90%;
-    max-width: auto;
+    width: auto;
+    max-width: 450px;
     position: relative;
     padding: 0px;
     -webkit-box-shadow: 0 30px 60px 0 rgba(0,0,0,0.3);
@@ -91,7 +91,7 @@ h2 {
     text-align: center;
 }
 td{
-    width: 100px;
+    width: 90px;
     max-width: 450px;
     font-size: 12px;
 }
