--- a/css/style.css
+++ b/css/style.css
@@ -83,7 +83,6 @@ h2 {
     background: #fff;
     padding: 30px;
     width: auto;
-    max-width: 450px;
     position: relative;
     padding: 0px;
     -webkit-box-shadow: 0 30px 60px 0 rgba(0,0,0,0.3);
@@ -94,6 +93,7 @@ td{
     width: 90px;
     max-width: 450px;
     font-size: 12px;
+    text-align: center;
 }
 #formFooter {
     background-color: #f6f6f6;
