--- a/css/style.css
+++ b/css/style.css
@@ -83,7 +83,7 @@ h2 {
     background: #fff;
     padding: 30px;
     width: auto;
-    max-width: auto;
+    max-width: 450px;
     position: relative;
     padding: 0px;
     -webkit-box-shadow: 0 30px 60px 0 rgba(0,0,0,0.3);
