--- a/css/style.css
+++ b/css/style.css
@@ -91,7 +91,7 @@ h2 {
     text-align: center;
 }
 td{
-    width: 90px;
+    width: auto;
     max-width: 450px;
     font-size: 12px;
     text-align: center;
