--- a/css/style.css
+++ b/css/style.css
@@ -91,6 +91,8 @@ h2 {
     text-align: center;
 }
 td{
+    padding-top: 10px;
+    padding-left: 5px;
     width: 90%;
     max-width: auto;
     font-size: 12px;
