--- a/css/style.css
+++ b/css/style.css
@@ -90,14 +90,12 @@ h2 {
     box-shadow: 0 30px 60px 0 rgba(0,0,0,0.3);
     text-align: center;
 }
-/*td{
-
+td{
     width: 90%;
-
     max-width: 450px;
     font-size: 12px;
     text-align: center;
-}*/
+}
 #formFooter {
     background-color: #f6f6f6;
     width: 100%;
